# jailbreak-defense

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
checkpoints/complete_system/: integration_test_results.json
checkpoints/safety_prober/: best_model.pt
checkpoints/steering/: refusal_direction.pt  refusal_direction_analysis.json  steering_eval.json  steering_matrix.pt
data/extended/: unified_test_set.json
demo/: demo_jailbreak.py  quick_demo.py
figures/model_comparison/: comparison_data.json  model_comparison_table.tex
figures/tables/: table1_dataset.tex  table2_main_results.tex  table3_ablation.tex  table4_hyperparameters.tex  table6_base_models.tex  (+3 more)
notebooks/: HiSCaM_Demo.ipynb
paper/: main.tex  main_full.tex  paper_draft.md  paper_draft_chinese.md  references.bib  项目概述.md
scripts/: build_large_harmful_dataset.py  causal_analysis.py  compute_refusal_direction.py  download_datasets.py  download_extended_datasets.py  evaluate_adversarial_robustness.py  evaluate_baselines.py  evaluate_benchmark.py  generate_figures.py  generate_hidden_states.py  generate_model_comparison_figures.py  generate_project_overview_pdf.py  generate_tables.py  integrate_system.py  multi_model_experiment.py  preprocess_data.py  run_cpu_subset.py  statistical_analysis.py  test_defense.py  train_risk_encoder.py  train_safety_prober.py  train_steering_matrix.py  update_figures_real_data.py  verify_data.py
src/: data_subset.py  defense_system.py
tests/: test_models.py
(+25 files in other folders)
